# agentic-ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GLOSSARY.md  README.md  ROADMAP.md  chat.md  pyproject.toml
phase-1/: 00_count_tokens.py  01_stream_hello.py  02_quiz_cli.py  README.md
phase-1/evals/: eval_quiz.py  topics.jsonl
phase-2/: 01_embeddings.py  02_build_index.py  03_retrieve.py  04_rag_chat.py  05_with_caching.py  README.md
phase-2/evals/: eval_rag.py  eval_set.jsonl
phase-3/: 01_agent_loop_minimal.py  02_agent_loop_robust.py  03_agent_loop_react.py  04_self_critique.py  05_research_agent.py  README.md
phase-3/evals/: eval_research.py  eval_set.jsonl
phase-3/reports/: mcp-overview.md  react-prompting-pattern.md  retrieval-augmented-generation-rag.md
phase-4/: 01_sdk_hello.py  02_research_agent_sdk.py  03_sdk_vs_scratch.md  04_prompt_chaining.py  05_routing.py  06_parallelization.py  07_orchestrator_workers.py  08_evaluator_optimizer.py  09_langgraph_research_agent.py  README.md
phase-4/reports/: react_prompting_pattern.md
